src/snapshots/droid_tui__regression__visual_boxed_vs_plain_led_pairs_snapshot@led_pairs_terminal_100_html.snap
---
source: src/regression.rs
assertion_line: 1828
expression: html
---
<span style="font-weight:bold">┌</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">┐</span>
<span style="font-weight:bold">│</span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold">D</span><span style="font-weight:bold">R</span><span style="font-weight:bold">O</span><span style="font-weight:bold">I</span><span style="font-weight:bold">D</span><span style="font-weight:bold">:</span><span style="font-weight:bold"> </span><span style="font-weight:bold">l</span><span style="font-weight:bold">e</span><span style="font-weight:bold">d</span><span style="font-weight:bold">_</span><span style="font-weight:bold">p</span><span style="font-weight:bold">a</span><span style="font-weight:bold">i</span><span style="font-weight:bold">r</span><span style="font-weight:bold">s</span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold">│</span>
<span style="font-weight:bold">└</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">┘</span>
┌ Pot ─────────────────────────────────────────────────────────────────────────────────────────────┐
│┌ ○ Button B1.1┐  ○ Button B1.2 ┌ ◉ Pot P1.1 ──┐   ○ LED L1.2     ○ Button B1.3   ○ Button B1.4   │
││     OFF ○    │       OFF      │     0% ○     │       OFF             OFF             OFF        │
│└──────────────┘                └──────────────┘                                                  │
│   ○ LED L1.4     ○ Button B1.5    ○ LED L1.5     ○ Button B1.6    ○ LED L1.6     ○ Button B1.7   │
│       OFF             OFF             OFF             OFF             OFF             OFF        │
│                                                                                                  │
│   ○ LED L1.7     ○ Button B1.8    ○ LED L1.8      ◉ Pot P1.2                                     │
│       OFF             OFF             OFF             0%                                         │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘























┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press &#39;l&#39; to load. | Scale: 1.0 | Orientation: Portrait                          │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
