src/snapshots/droid_tui__regression__visual_dependency_filter_snapshot@dependency_filter.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                             DROID: graph_dependency_walk                                             │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Panels ──────────────────────────────────────────────────────────────┐┌ Graph ───────────────────────────────────────┐
│◉◉┐◉─◉┐┌────┐┌──┐                                                     ││                                              │
│…0%0%0%  CV …  C…                                                     ││                                              │
││ ││  ││    ││  │                                                     ││                                              │
││ ││  ││    ││  │                                                     ││                                              │
││ ││  ││    ││  │                                                     ││                                              │
││ ││  ││    ││  │                                                     ││                                              │
││ ││  ││    ││  │                                                     ││                                              │
││ ││  ││    ││  │                                                     ││                                              │
││ ││  ││    ││  │                                                     ││                                              │
││ ││  ││    ││  │                                                     ││  ╭p2b8────────────────╮╭O1──────────────────╮│
│○○│○○○││    ││  │                                                     ││  │          │         ││         │          ││
│……│… …││    ││  │                                                     ││  │          ◉─────────●◉─────────●          ││
││ ││  ││    ││  │                                                     ││  │          │  ╭mixer─││─────────│──╮       ││
││ ││  ││    ││  │                                                     ││  ╰────────────────────╯╰────────────────────╯│
│○○│○ ○││  ▶ ││  │                                                     ││                ◉──────┐      └──────●        │
│○○│…○○││  … ││  │                                                     ││                │      │             │        │
││ ││  ││    ││  │                                                     ││          ╭produ╰────────────────────╯        │
││ ││  ││    ││  │                                                     ││╭p2b8────────────────╮ │       │              │
││ ││  ││    ││  │                                                     │││         ◉────┐     │ └───────●              │
│○○│○○○││    ││  │                                                     ││◉         │    └─────●         │              │
│……│… …││    ││  │                                                     │││         ╰──────────│─────────╯              │
││ ││  ││    ││  │                                                     ││╰────────────────────╯                        │
││ ││  ││    ││  │                                                     ││                                              │
│○○│○ ○││    ││  │                                                     ││                                              │
│○○│…○○││    ││  │                                                     ││                                              │
││ ││  ││    ││  │                                                     ││                                              │
││ ││  ││    ││  │                                                     ││                                              │
││ ││  ││    ││  │                                                     ││                                              │
││ ││  ││    ││  │                                                     ││                                              │
││ ││  ││    ││  │                                                     ││                                              │
││ ││  ││    ││  │                                                     ││                                              │
│└─┘└──┘└────┘└──┘                                                     ││                                              │
└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Dependencies of O1: 6 nodes | Renders degraded at 120 cols — use ≥ 328 cols or reduce scale | latency avg 1.0 / max 1.│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
