src/snapshots/droid_tui__regression__visual_device_led_defaults_snapshot@device_led_defaults_classic_80.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────┐
│                          DROID: device_led_defaults                          │
└──────────────────────────────────────────────────────────────────────────────┘
┌─────────┐┌─────┐┌─────┐
│ M4 1    │○ ○3○○2  CV I…
▯  ▯ ▯  ▯ │…○○ ○…○│     │
▯  ▯ ▯  ▯ ││     ││     │
▯  ▯ ▯  ▯ │○ ○ ○○││     │
▯  ▯ ▯  ▯ │…○○ ○…○│     │
▯  ▯ ▯  ▯ ││     ││     │
▯  ▯ ▯  ▯ ││     ││     │
▯  ▯ ▯  ▯ │○ ○ ○○││     │
▯  ▯ ▯  ▯ │…○○ ○…○│     │
▯  ▯ ▯  ▯ ││     ││     │
▯  ▯ ▯  ▯ ││     ││     │
▯  ▯ ▯  ▯ │○ ○ ○○││     │
▯  ▯ ▯  ▯ │…○○ ○…○│     │
▯  ▯ ▯  ▯ ││     ││     │
▯  ▯ ▯  ▯ ││     ││◀ ▶  │
▯  ▯ ▯  ▯ │○ ○ ○○││… …  │
▯  ▯ ▯  ▯ │…○○ ○…○│     │
▯  ▯ ▯  ▯ ││     ││     │
▯  ▯ ▯  ▯ ││     ││     │
▯  ▯ ▯  ▯ │○ ○ ○○││     │
│         │…○○ ○…○│     │
│         ││     ││     │
○  ○ ○  ○ ││     ││     │
O… O…O… O…│○ ○ ○○││     │
│         │…○○ ○…○│     │
│         ││     ││     │
│         │○ ○ ○○││     │
│         │…○○ ○…○│     │
│         ││     ││     │
○  ○ ○  ○ ││     ││     │
│         ││     ││     │
│         ││     ││     │
│         ││     ││     │
│         ││     ││     │
└─────────┘└─────┘└─────┘


















┌──────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Renders degraded at 80 cols — use ≥ 1190│
└──────────────────────────────────────────────────────────────────────────────┘
