src/snapshots/droid_tui__regression__visual_device_led_defaults_snapshot@device_led_defaults_mono_120.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                              DROID: device_led_defaults                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌─────────┐┌─────┐┌─────┐
│ M4 1    │○ ○3○○2  CV I…
▯  ▯ ▯  ▯ │…○○ ○…○│     │
▯  ▯ ▯  ▯ ││     ││     │
▯  ▯ ▯  ▯ │○ ○ ○○││     │
▯  ▯ ▯  ▯ │…○○ ○…○│     │
▯  ▯ ▯  ▯ ││     ││     │
▯  ▯ ▯  ▯ ││     ││     │
▯  ▯ ▯  ▯ │○ ○ ○○││     │
▯  ▯ ▯  ▯ │…○○ ○…○│     │
▯  ▯ ▯  ▯ ││     ││     │
▯  ▯ ▯  ▯ ││     ││     │
▯  ▯ ▯  ▯ │○ ○ ○○││     │
▯  ▯ ▯  ▯ │…○○ ○…○│     │
▯  ▯ ▯  ▯ ││     ││     │
▯  ▯ ▯  ▯ ││     ││◀ ▶  │
▯  ▯ ▯  ▯ │○ ○ ○○││… …  │
▯  ▯ ▯  ▯ │…○○ ○…○│     │
▯  ▯ ▯  ▯ ││     ││     │
▯  ▯ ▯  ▯ ││     ││     │
▯  ▯ ▯  ▯ │○ ○ ○○││     │
│         │…○○ ○…○│     │
│         ││     ││     │
○  ○ ○  ○ ││     ││     │
O… O…O… O…│○ ○ ○○││     │
│         │…○○ ○…○│     │
│         ││     ││     │
│         │○ ○ ○○││     │
│         │…○○ ○…○│     │
│         ││     ││     │
○  ○ ○  ○ ││     ││     │
│         ││     ││     │
│         ││     ││     │
│         ││     ││     │
│         ││     ││     │
└─────────┘└─────┘└─────┘


















┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded device_led_defaults | Renders degraded at 120 cols — use ≥ 1190 cols or reduce scale | Scale: 1.0 | Orientation│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
