src/snapshots/droid_tui__regression__visual_diff_changed_node_marker_snapshot@diff_changed_classic_100.snap
---
source: src/regression.rs
assertion_line: 5079
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                       ┌Mixer──────────────────────────────────────────────────┐                  │
└───────────────────────│───────────────────────────────────────────────────────│──────────────────┘
                  ┌(unna│ed)───────────────┐             ╭contour─────────────╮ │
                  │     │                  │             │                    │ │
                  │ ╭button──────────────╮ │     ┌───────◉────┐               │ │
                  │ │   │                │ │     │       │    │               │ │
                  │ │   │                ●─┐─────┘       ╰────────────────────╯ │
                  │ │   │                │ │                  │                 │
                  │ ╰────────────────────╯ │                  │                 │
                  │     │                  │                  │                 │
                  └─────│──────────────────│                  │                 │
                        │                  │                  │                 │
                        │                  │                  │                 │
                        │                  │                  │                 │
                        │                  │                  │                 │
                        │                  │                  │                 │
                        │                  │                  │                 │
                        │                  │  ╭mixer*──────────────╮            │
                        │                  │  │               │    │            │
                        │                  └──◉               └────●            │
                        │                     │                    │            │
                        │                     ╰────────────────────╯            │
                        │                     │                                 │
                        │                     │                                 │
                        │                     │                                 │
                        │                     │                                 │
                        │                     │                                 │
                        │                     │                                 │
                        │                     │                                 │
                        │                     │                                 │
                        │                     │                                 │
                        │ ╭clocktool───────────╮                                │
                        │ │                   ││                                │
                        │ │                   └●                                │
                        │ │                    │                                │
                        │ ╰────────────────────╯                                │
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | latency avg 0.0 / max 0.0 (1 loop ≈ 190µs) | 0 back edge(s) │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
